+ Fixin gbugs with hammer JS and touch events on mobile
 + Implemetnign hammer js into project and activatign only on interaction

--- a/assets/component-cs-loading-screen.css
+++ b/assets/component-cs-loading-screen.css
@@ -2,8 +2,13 @@
 
 .coming-soon-container {
     overflow: hidden;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0; 
+    right: 0; 
+    bottom: 0; 
+    left: 0; 
 }
 
 body {
@@ -24,7 +29,7 @@ body {
 
 .loading-screen {
     background-color: black;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
